<resources>
    <string name="app_name">ShopTaskKT</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">

        Sign in
    </string>
    <string name="first_name">

First name
</string>
    <string name="last_name">

Last name
</string>
    <string name="email">

Email
</string>
    <string name="log_in">

Log in
</string>
    <string name="sign_in_wit">

Sign in with Google
</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="profile">Profile</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment method</string>
    <string name="balance">Balance</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="log_out">Log out</string>
    <string name="sing_in_with_apple">Sing in with Apple</string>
    <string name="wrong_mail">Wrong mail</string>
</resources>